--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       onchange="setAlarmTime(this.value)"
       type="datetime-local"
       name="alarmTime"
-      id=""
+      title="Please insert date and time followed by AM/PM"
+      data-hover="Please insert date and time followed by AM/PM"
     >
     <div class="controls">
       <button
